// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Scenario 1 : Updating of Sulfuras (no modification) 1`] = `
[
  "Item Name : Sulfuras, Hand of Ragnaros",
  "SellIn : 0",
  "Quality : 80",
  "Updated SellIn : 0",
  "Updated Quality : 80",
]
`;

exports[`Scenario 2 : Updating of a normal item 1`] = `
[
  "Item Name : Normal Item",
  "SellIn : 10",
  "Quality : 20",
  "Updated SellIn : 9",
  "Updated Quality : 19",
]
`;

exports[`Scenario 3 : Updating of a normal item when quality = 0 1`] = `
[
  "Item Name : Normal Item",
  "SellIn : 10",
  "Quality : 0",
  "Updated SellIn : 9",
  "Updated Quality : 0",
]
`;

exports[`Scenario 4 : Updating of a normal item when sellIn < 0 1`] = `
[
  "Item Name : Normal Item",
  "SellIn : 0",
  "Quality : 30",
  "Updated SellIn : -1",
  "Updated Quality : 28",
]
`;

exports[`Scenario 5 : Updating of Aged Brie 1`] = `
[
  "Item Name : Aged Brie",
  "SellIn : 5",
  "Quality : 30",
  "Updated SellIn : 4",
  "Updated Quality : 31",
]
`;

exports[`Scenario 6 : Updating of Aged Brie when quality = 50 1`] = `
[
  "Item Name : Aged Brie",
  "SellIn : 10",
  "Quality : 50",
  "Updated SellIn : 9",
  "Updated Quality : 50",
]
`;

exports[`Scenario 7 : Updating of Aged Brie when sellIn < 0 1`] = `
[
  "Item Name : Aged Brie",
  "SellIn : 0",
  "Quality : 30",
  "Updated SellIn : -1",
  "Updated Quality : 32",
]
`;

exports[`Scenario 8 : Updating of Backstage Passes 1`] = `
[
  "Item Name : Backstage passes to a TAFKAL80ETC concert",
  "SellIn : 15",
  "Quality : 40",
  "Updated SellIn : 14",
  "Updated Quality : 41",
]
`;

exports[`Scenario 9 : Updating of Backstage Passes when sellIn < 10 1`] = `
[
  "Item Name : Backstage passes to a TAFKAL80ETC concert",
  "SellIn : 6",
  "Quality : 30",
  "Updated SellIn : 5",
  "Updated Quality : 32",
]
`;

exports[`Scenario 10 : Updating of Backstage Passes when sellIn < 5 1`] = `
[
  "Item Name : Backstage passes to a TAFKAL80ETC concert",
  "SellIn : 3",
  "Quality : 30",
  "Updated SellIn : 2",
  "Updated Quality : 33",
]
`;

exports[`Scenario 11 : Updating of Backstage Passes when sellIn < 0 1`] = `
[
  "Item Name : Backstage passes to a TAFKAL80ETC concert",
  "SellIn : 0",
  "Quality : 30",
  "Updated SellIn : -1",
  "Updated Quality : 0",
]
`;
